created basic layout for address step in checkout

--- a/app/views/checkouts/_checkout_header.html.erb
+++ b/app/views/checkouts/_checkout_header.html.erb
@@ -1,8 +1,8 @@
 <header class="checkout-header">
-  <h1 class="checkout-header__title">
+  <h1 class="text-xl font-semibold">
     <%= t('spree.checkout') %>
   </h1>
-  <div class="checkout-header__steps">
+  <div class="">
     <%= checkout_progress %>
   </div>
 </header>
