--- a/app/views/checkouts/_checkout_header.html.erb
+++ b/app/views/checkouts/_checkout_header.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-xl font-semibold">
     <%= t('spree.checkout') %>
   </h1>
-  <div class="">
+  <div class="flex">
     <%= checkout_progress %>
   </div>
 </header>
