--- a/app/views/checkouts/steps/_address_step.html.erb
+++ b/app/views/checkouts/steps/_address_step.html.erb
@@ -1,7 +1,7 @@
 <% order = form.object %>
 
-<div class="address-step">
-  <fieldset class="address-step__billing" id="billing">
+<div class="flex flex-col w-full">
+  <fieldset class="flex flex-col" id="billing">
     <legend>
       <%= t("spree.billing_address") %>
     </legend>
