--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center p-4 border-b-[0.01rem] border-zinc-700 bg-base-100">
+<div class="flex justify-between items-center border-b-[0.01rem] border-zinc-700 bg-base-100 px-4 py-4 sm:px-20 md:px-28 lg:px-44">
 
   <%= link_to 'Marius Armory', root_path, class: 'font-logo text-3xl select-none' %>
 
