--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -14,19 +14,19 @@
 
   <div id="nav-dropdown" class="block sm:hidden dropdown dropdown-end">
     <label tabindex="0"><i class="fa fa-bars text-xl"></i></label>
-    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52 z-10 text-2xl">
+    <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52 z-10 text-2xl font-sans">
       <% if spree_current_user %>
         <li>
-          <%= link_to '', account_path, class: 'fa fa-user' %>
+          <%= link_to 'Account', account_path, class: 'fa fa-user' %>
         </li>
       <% else %>
         <li>
-          <%= link_to '', login_path, class: 'fa fa-user' %>
+          <%= link_to 'Account', login_path, class: 'fa fa-user' %>
         </li>
       <% end %>
 
         <li>
-          <%= link_to '', edit_cart_path, class: 'text-2xl fa fa-shopping-cart' %>
+          <%= link_to 'Cart', edit_cart_path, class: 'fa fa-shopping-cart' %>
         </li>
     </ul>
   </div>
