checkout javascript wip

--- a/app/views/checkouts/steps/address_step/_address_inputs.html.erb
+++ b/app/views/checkouts/steps/address_step/_address_inputs.html.erb
@@ -36,7 +36,7 @@
       :name,
       {},
       autocomplete: "#{address_type} country-name",
-      class: 'js-trigger-state-change, select select-bordered',
+      class: 'js-trigger-state-change select select-bordered',
       required: true,
       "data-state-container": "##{address_type} .js-address-fields"
     ) %>
